// Vitest Snapshot v1

exports[`wing compile captures.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_iam_role": {
      "root_cloudFunction_IamRole_DAEC3578": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/IamRole",
            "uniqueId": "root_cloudFunction_IamRole_DAEC3578",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "root_cloudFunction_IamRolePolicy_AAE6C0C0": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/IamRolePolicy",
            "uniqueId": "root_cloudFunction_IamRolePolicy_AAE6C0C0",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}\\",\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}\\",\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}\\",\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_PrivateBucket_82B4DCC5.arn}\\",\\"\${aws_s3_bucket.root_PrivateBucket_82B4DCC5.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_PrivateBucket_82B4DCC5.arn}\\",\\"\${aws_s3_bucket.root_PrivateBucket_82B4DCC5.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_PrivateBucket_82B4DCC5.arn}\\",\\"\${aws_s3_bucket.root_PrivateBucket_82B4DCC5.arn}/*\\"],\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.root_cloudFunction_IamRole_DAEC3578.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "root_cloudFunction_IamRolePolicyAttachment_FC3D9E7C": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/IamRolePolicyAttachment",
            "uniqueId": "root_cloudFunction_IamRolePolicyAttachment_FC3D9E7C",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_cloudFunction_IamRole_DAEC3578.name}",
      },
    },
    "aws_lambda_function": {
      "root_cloudFunction_6A57BA0A": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/Default",
            "uniqueId": "root_cloudFunction_6A57BA0A",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_0c557d45": "\${aws_s3_bucket.root_PrivateBucket_82B4DCC5.bucket}",
            "BUCKET_NAME_21bd2572": "\${aws_s3_bucket.root_PublicBucket_73AE6C59.bucket}",
            "BUCKET_NAME_d755b447": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
            "WING_FUNCTION_NAME": "cloud.Function",
          },
        },
        "function_name": "cloud.Function",
        "handler": "index.handler",
        "role": "\${aws_iam_role.root_cloudFunction_IamRole_DAEC3578.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_cloudFunction_Bucket_245CAEB7.bucket}",
        "s3_key": "\${aws_s3_object.root_cloudFunction_S3Object_C8435368.key}",
      },
    },
    "aws_s3_bucket": {
      "root_PrivateBucket_82B4DCC5": {
        "//": {
          "metadata": {
            "path": "root/PrivateBucket/Default",
            "uniqueId": "root_PrivateBucket_82B4DCC5",
          },
        },
      },
      "root_PublicBucket_73AE6C59": {
        "//": {
          "metadata": {
            "path": "root/PublicBucket/Default",
            "uniqueId": "root_PublicBucket_73AE6C59",
          },
        },
      },
      "root_cloudBucket_4F3C4F53": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Default",
            "uniqueId": "root_cloudBucket_4F3C4F53",
          },
        },
      },
      "root_cloudFunction_Bucket_245CAEB7": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/Bucket",
            "uniqueId": "root_cloudFunction_Bucket_245CAEB7",
          },
        },
      },
    },
    "aws_s3_bucket_policy": {
      "root_PublicBucket_PublicPolicy_98DDAE96": {
        "//": {
          "metadata": {
            "path": "root/PublicBucket/PublicPolicy",
            "uniqueId": "root_PublicBucket_PublicPolicy_98DDAE96",
          },
        },
        "bucket": "\${aws_s3_bucket.root_PublicBucket_73AE6C59.bucket}",
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":\\"*\\",\\"Action\\":[\\"s3:GetObject\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}/*\\"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "root_PrivateBucket_PublicAccessBlock_DB813250": {
        "//": {
          "metadata": {
            "path": "root/PrivateBucket/PublicAccessBlock",
            "uniqueId": "root_PrivateBucket_PublicAccessBlock_DB813250",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.root_PrivateBucket_82B4DCC5.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
      "root_cloudBucket_PublicAccessBlock_319C1C2E": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/PublicAccessBlock",
            "uniqueId": "root_cloudBucket_PublicAccessBlock_319C1C2E",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "root_PrivateBucket_Encryption_F9F2144A": {
        "//": {
          "metadata": {
            "path": "root/PrivateBucket/Encryption",
            "uniqueId": "root_PrivateBucket_Encryption_F9F2144A",
          },
        },
        "bucket": "\${aws_s3_bucket.root_PrivateBucket_82B4DCC5.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
      "root_PublicBucket_Encryption_FB9A8400": {
        "//": {
          "metadata": {
            "path": "root/PublicBucket/Encryption",
            "uniqueId": "root_PublicBucket_Encryption_FB9A8400",
          },
        },
        "bucket": "\${aws_s3_bucket.root_PublicBucket_73AE6C59.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
      "root_cloudBucket_Encryption_8ED0CD9C": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Encryption",
            "uniqueId": "root_cloudBucket_Encryption_8ED0CD9C",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_object": {
      "root_cloudFunction_S3Object_C8435368": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/S3Object",
            "uniqueId": "root_cloudFunction_S3Object_C8435368",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudFunction_Bucket_245CAEB7.bucket}",
        "key": "<ASSET_KEY>",
      },
    },
  },
}
`;

exports[`wing compile captures.w > index.js 1`] = `
"async function $proc({ bucket1, bucket2, bucket3 }, event) {
  bucket1.put(\\"file.txt\\",\\"data\\");
  bucket2.get(\\"file.txt\\");
  bucket2.get(\\"file2.txt\\");
  bucket3.get(\\"file3.txt\\");
};"
`;

exports[`wing compile captures.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile captures.w > preflight.js 1`] = `
"const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? \\".\\";

function __app(target) {
	switch (target) {
		case \\"sim\\":
			return $stdlib.sim.App;
		case \\"tfaws\\":
		case \\"tf-aws\\":
			return $stdlib.tfaws.App;
		default:
			throw new Error(\`Unknown WING_TARGET value: \\"\${process.env.WING_TARGET ?? \\"\\"}\\"\`);
	}
}
const $App = __app(process.env.WING_TARGET);

const cloud = require('@winglang/wingsdk').cloud;
class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: \\"captures\\" });
  
  let bucket1 = new cloud.Bucket(this,\\"cloud.Bucket\\");
  let bucket2 = new cloud.Bucket(this,\\"PublicBucket\\",{
  \\"public\\": true,}
  );
  let bucket3 = new cloud.Bucket(this,\\"PrivateBucket\\",{ public: false });
  const handler = new $stdlib.core.Inflight({
    code: $stdlib.core.NodeJsCode.fromFile(require('path').resolve(__dirname, \\"proc.fbe8390dfb806ebb9cf6fb068b954cc08fea3056e20a3e69ee8e07cbc86449bf/index.js\\")),
    entrypoint: \\"$proc\\",
    captures: {
      bucket1: {
        resource: bucket1,
        methods: [\\"get\\",\\"list\\",\\"put\\"]
      },
      bucket2: {
        resource: bucket2,
        methods: [\\"get\\",\\"list\\",\\"put\\"]
      },
      bucket3: {
        resource: bucket3,
        methods: [\\"get\\",\\"list\\",\\"put\\"]
      },
    }
  });
  new cloud.Function(this,\\"cloud.Function\\",handler,{
  \\"env\\": {
  
  },}
  );
}
}
new MyApp().synth();"
`;

exports[`wing compile expressions_binary_operators.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
}
`;

exports[`wing compile expressions_binary_operators.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile expressions_binary_operators.w > preflight.js 1`] = `
"const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? \\".\\";

function __app(target) {
	switch (target) {
		case \\"sim\\":
			return $stdlib.sim.App;
		case \\"tfaws\\":
		case \\"tf-aws\\":
			return $stdlib.tfaws.App;
		default:
			throw new Error(\`Unknown WING_TARGET value: \\"\${process.env.WING_TARGET ?? \\"\\"}\\"\`);
	}
}
const $App = __app(process.env.WING_TARGET);

class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: \\"expressions_binary_operators\\" });
  
  let x = 1;
  let y = (2 * x);
  let z = ((x + y) - 1);
  let xyz = (((y * y) / (x * x)) * z);
}
}
new MyApp().synth();"
`;

exports[`wing compile expressions_string_interpolation.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
}
`;

exports[`wing compile expressions_string_interpolation.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile expressions_string_interpolation.w > preflight.js 1`] = `
"const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? \\".\\";

function __app(target) {
	switch (target) {
		case \\"sim\\":
			return $stdlib.sim.App;
		case \\"tfaws\\":
		case \\"tf-aws\\":
			return $stdlib.tfaws.App;
		default:
			throw new Error(\`Unknown WING_TARGET value: \\"\${process.env.WING_TARGET ?? \\"\\"}\\"\`);
	}
}
const $App = __app(process.env.WING_TARGET);

class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: \\"expressions_string_interpolation\\" });
  
  let regular_string = \\"str\\\\n\\\\\\"\\";
  let empty_string = \\"\\";
  let number = 1;
  let cool_string = \`cool \\\\\\"\\\\\${\${regular_string}}\\\\\\" test\`;
  let really_cool_string = \`\${number}\${number}\${empty_string}\${empty_string}\\\\n\${cool_string}\${cool_string}\\\\n\\\\\${empty_string}\${\\"string-in-string\\"}!\`;
}
}
new MyApp().synth();"
`;

exports[`wing compile file_counter.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_dynamodb_table": {
      "root_cloudCounter_E0AC1263": {
        "//": {
          "metadata": {
            "path": "root/cloud.Counter/Default",
            "uniqueId": "root_cloudCounter_E0AC1263",
          },
        },
        "attribute": [
          {
            "name": "id",
            "type": "S",
          },
        ],
        "billing_mode": "PAY_PER_REQUEST",
        "hash_key": "id",
        "name": "wingsdk-counter-c866f225dbe83e49644c661486cb428e3749baa65c",
      },
    },
    "aws_iam_role": {
      "root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRole_069C552D": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-5cd9e35eaf590a95/IamRole",
            "uniqueId": "root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRole_069C552D",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRolePolicy_B12C3DCB": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-5cd9e35eaf590a95/IamRolePolicy",
            "uniqueId": "root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRolePolicy_B12C3DCB",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"dynamodb:UpdateItem\\"],\\"Resource\\":\\"\${aws_dynamodb_table.root_cloudCounter_E0AC1263.arn}\\",\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"sqs:ReceiveMessage\\",\\"sqs:ChangeMessageVisibility\\",\\"sqs:GetQueueUrl\\",\\"sqs:DeleteMessage\\",\\"sqs:GetQueueAttributes\\"],\\"Resource\\":\\"\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}\\",\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRole_069C552D.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRolePolicyAttachment_F6C207F0": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-5cd9e35eaf590a95/IamRolePolicyAttachment",
            "uniqueId": "root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRolePolicyAttachment_F6C207F0",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRole_069C552D.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "root_cloudQueue_EventSourceMapping_A2041279": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/EventSourceMapping",
            "uniqueId": "root_cloudQueue_EventSourceMapping_A2041279",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}",
        "function_name": "\${aws_lambda_function.root_cloudQueue_OnMessage5cd9e35eaf590a95_CB3F958A.function_name}",
      },
    },
    "aws_lambda_function": {
      "root_cloudQueue_OnMessage5cd9e35eaf590a95_CB3F958A": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-5cd9e35eaf590a95/Default",
            "uniqueId": "root_cloudQueue_OnMessage5cd9e35eaf590a95_CB3F958A",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_d755b447": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
            "DYNAMODB_TABLE_NAME_49baa65c": "\${aws_dynamodb_table.root_cloudCounter_E0AC1263.name}",
            "WING_FUNCTION_NAME": "OnMessage-5cd9e35eaf590a95",
          },
        },
        "function_name": "OnMessage-5cd9e35eaf590a95",
        "handler": "index.handler",
        "role": "\${aws_iam_role.root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRole_069C552D.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_cloudQueue_OnMessage5cd9e35eaf590a95_Bucket_0EC130ED.bucket}",
        "s3_key": "\${aws_s3_object.root_cloudQueue_OnMessage5cd9e35eaf590a95_S3Object_346A6F4F.key}",
      },
    },
    "aws_s3_bucket": {
      "root_cloudBucket_4F3C4F53": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Default",
            "uniqueId": "root_cloudBucket_4F3C4F53",
          },
        },
      },
      "root_cloudQueue_OnMessage5cd9e35eaf590a95_Bucket_0EC130ED": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-5cd9e35eaf590a95/Bucket",
            "uniqueId": "root_cloudQueue_OnMessage5cd9e35eaf590a95_Bucket_0EC130ED",
          },
        },
      },
    },
    "aws_s3_bucket_public_access_block": {
      "root_cloudBucket_PublicAccessBlock_319C1C2E": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/PublicAccessBlock",
            "uniqueId": "root_cloudBucket_PublicAccessBlock_319C1C2E",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "root_cloudBucket_Encryption_8ED0CD9C": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Encryption",
            "uniqueId": "root_cloudBucket_Encryption_8ED0CD9C",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_object": {
      "root_cloudQueue_OnMessage5cd9e35eaf590a95_S3Object_346A6F4F": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-5cd9e35eaf590a95/S3Object",
            "uniqueId": "root_cloudQueue_OnMessage5cd9e35eaf590a95_S3Object_346A6F4F",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudQueue_OnMessage5cd9e35eaf590a95_Bucket_0EC130ED.bucket}",
        "key": "<ASSET_KEY>",
      },
    },
  },
}
`;

exports[`wing compile file_counter.w > index.js 1`] = `
"async function $proc({ bucket, counter }, body) {
  let next = counter.inc();
  let key = \`myfile-\${\\"hi\\"}.txt\`;
  bucket.put(key,body);
};"
`;

exports[`wing compile file_counter.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile file_counter.w > preflight.js 1`] = `
"const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? \\".\\";

function __app(target) {
	switch (target) {
		case \\"sim\\":
			return $stdlib.sim.App;
		case \\"tfaws\\":
		case \\"tf-aws\\":
			return $stdlib.tfaws.App;
		default:
			throw new Error(\`Unknown WING_TARGET value: \\"\${process.env.WING_TARGET ?? \\"\\"}\\"\`);
	}
}
const $App = __app(process.env.WING_TARGET);

const cloud = require('@winglang/wingsdk').cloud;
class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: \\"file_counter\\" });
  
  let bucket = new cloud.Bucket(this,\\"cloud.Bucket\\");
  let counter = new cloud.Counter(this,\\"cloud.Counter\\",{ initial_value: 100 });
  let queue = new cloud.Queue(this,\\"cloud.Queue\\",{ timeout: $stdlib.core.Duration.fromSeconds(10) });
  const handler = new $stdlib.core.Inflight({
    code: $stdlib.core.NodeJsCode.fromFile(require('path').resolve(__dirname, \\"proc.86754ece6e35adfd186315aa4bfcf647f5f280df200188741606e0383871bfc3/index.js\\")),
    entrypoint: \\"$proc\\",
    captures: {
      bucket: {
        resource: bucket,
        methods: [\\"get\\",\\"list\\",\\"put\\"]
      },
      counter: {
        resource: counter,
        methods: [\\"inc\\"]
      },
    }
  });
  queue.onMessage(handler);
}
}
new MyApp().synth();"
`;

exports[`wing compile forward_decl.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
}
`;

exports[`wing compile forward_decl.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile forward_decl.w > preflight.js 1`] = `
"const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? \\".\\";

function __app(target) {
	switch (target) {
		case \\"sim\\":
			return $stdlib.sim.App;
		case \\"tfaws\\":
		case \\"tf-aws\\":
			return $stdlib.tfaws.App;
		default:
			throw new Error(\`Unknown WING_TARGET value: \\"\${process.env.WING_TARGET ?? \\"\\"}\\"\`);
	}
}
const $App = __app(process.env.WING_TARGET);

class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: \\"forward_decl\\" });
  
  class R
  {
  constructor() {
  }
  f;
  method2() {
    this.method1();
    console.log(\`\${this.f}\`);
    this.method2();
  }
  method1() {
  }
  }
  let x = \\"hi\\";
  if (true) {
    console.log(\`\${x}\`);
    let y = new R(this,\\"R\\");
  }
}
}
new MyApp().synth();"
`;

exports[`wing compile hello.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_iam_role": {
      "root_cloudQueue_OnMessagef2236b9947ff57cf_IamRole_1BC2CA4B": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-f2236b9947ff57cf/IamRole",
            "uniqueId": "root_cloudQueue_OnMessagef2236b9947ff57cf_IamRole_1BC2CA4B",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "root_cloudQueue_OnMessagef2236b9947ff57cf_IamRolePolicy_53F6F7E2": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-f2236b9947ff57cf/IamRolePolicy",
            "uniqueId": "root_cloudQueue_OnMessagef2236b9947ff57cf_IamRolePolicy_53F6F7E2",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"sqs:ReceiveMessage\\",\\"sqs:ChangeMessageVisibility\\",\\"sqs:GetQueueUrl\\",\\"sqs:DeleteMessage\\",\\"sqs:GetQueueAttributes\\"],\\"Resource\\":\\"\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}\\",\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.root_cloudQueue_OnMessagef2236b9947ff57cf_IamRole_1BC2CA4B.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "root_cloudQueue_OnMessagef2236b9947ff57cf_IamRolePolicyAttachment_B18EEFFB": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-f2236b9947ff57cf/IamRolePolicyAttachment",
            "uniqueId": "root_cloudQueue_OnMessagef2236b9947ff57cf_IamRolePolicyAttachment_B18EEFFB",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_cloudQueue_OnMessagef2236b9947ff57cf_IamRole_1BC2CA4B.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "root_cloudQueue_EventSourceMapping_A2041279": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/EventSourceMapping",
            "uniqueId": "root_cloudQueue_EventSourceMapping_A2041279",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}",
        "function_name": "\${aws_lambda_function.root_cloudQueue_OnMessagef2236b9947ff57cf_6BC03D57.function_name}",
      },
    },
    "aws_lambda_function": {
      "root_cloudQueue_OnMessagef2236b9947ff57cf_6BC03D57": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-f2236b9947ff57cf/Default",
            "uniqueId": "root_cloudQueue_OnMessagef2236b9947ff57cf_6BC03D57",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_d755b447": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
            "WING_FUNCTION_NAME": "OnMessage-f2236b9947ff57cf",
          },
        },
        "function_name": "OnMessage-f2236b9947ff57cf",
        "handler": "index.handler",
        "role": "\${aws_iam_role.root_cloudQueue_OnMessagef2236b9947ff57cf_IamRole_1BC2CA4B.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_cloudQueue_OnMessagef2236b9947ff57cf_Bucket_ABACB2AB.bucket}",
        "s3_key": "\${aws_s3_object.root_cloudQueue_OnMessagef2236b9947ff57cf_S3Object_AF8A5823.key}",
      },
    },
    "aws_s3_bucket": {
      "root_cloudBucket_4F3C4F53": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Default",
            "uniqueId": "root_cloudBucket_4F3C4F53",
          },
        },
      },
      "root_cloudQueue_OnMessagef2236b9947ff57cf_Bucket_ABACB2AB": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-f2236b9947ff57cf/Bucket",
            "uniqueId": "root_cloudQueue_OnMessagef2236b9947ff57cf_Bucket_ABACB2AB",
          },
        },
      },
    },
    "aws_s3_bucket_public_access_block": {
      "root_cloudBucket_PublicAccessBlock_319C1C2E": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/PublicAccessBlock",
            "uniqueId": "root_cloudBucket_PublicAccessBlock_319C1C2E",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "root_cloudBucket_Encryption_8ED0CD9C": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Encryption",
            "uniqueId": "root_cloudBucket_Encryption_8ED0CD9C",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_object": {
      "root_cloudQueue_OnMessagef2236b9947ff57cf_S3Object_AF8A5823": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-f2236b9947ff57cf/S3Object",
            "uniqueId": "root_cloudQueue_OnMessagef2236b9947ff57cf_S3Object_AF8A5823",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudQueue_OnMessagef2236b9947ff57cf_Bucket_ABACB2AB.bucket}",
        "key": "<ASSET_KEY>",
      },
    },
  },
}
`;

exports[`wing compile hello.w > index.js 1`] = `
"async function $proc({ bucket }, message) {
  bucket.put(\\"hello.txt\\",\`Hello, \${message}!\`);
  return message;
};"
`;

exports[`wing compile hello.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile hello.w > preflight.js 1`] = `
"const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? \\".\\";

function __app(target) {
	switch (target) {
		case \\"sim\\":
			return $stdlib.sim.App;
		case \\"tfaws\\":
		case \\"tf-aws\\":
			return $stdlib.tfaws.App;
		default:
			throw new Error(\`Unknown WING_TARGET value: \\"\${process.env.WING_TARGET ?? \\"\\"}\\"\`);
	}
}
const $App = __app(process.env.WING_TARGET);

const cloud = require('@winglang/wingsdk').cloud;
class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: \\"hello\\" });
  
  let bucket = new cloud.Bucket(this,\\"cloud.Bucket\\");
  let queue = new cloud.Queue(this,\\"cloud.Queue\\");
  const handler = new $stdlib.core.Inflight({
    code: $stdlib.core.NodeJsCode.fromFile(require('path').resolve(__dirname, \\"proc.cefd654de30673ff4ee63c1586a3ac0e4b69217f987c07f9274ecb1c7b7e2066/index.js\\")),
    entrypoint: \\"$proc\\",
    captures: {
      bucket: {
        resource: bucket,
        methods: [\\"get\\",\\"list\\",\\"put\\"]
      },
    }
  });
  queue.onMessage(handler);
}
}
new MyApp().synth();"
`;

exports[`wing compile print.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_iam_role": {
      "root_cloudFunction_IamRole_DAEC3578": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/IamRole",
            "uniqueId": "root_cloudFunction_IamRole_DAEC3578",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "root_cloudFunction_IamRolePolicy_AAE6C0C0": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/IamRolePolicy",
            "uniqueId": "root_cloudFunction_IamRolePolicy_AAE6C0C0",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.root_cloudFunction_IamRole_DAEC3578.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "root_cloudFunction_IamRolePolicyAttachment_FC3D9E7C": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/IamRolePolicyAttachment",
            "uniqueId": "root_cloudFunction_IamRolePolicyAttachment_FC3D9E7C",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_cloudFunction_IamRole_DAEC3578.name}",
      },
    },
    "aws_lambda_function": {
      "root_cloudFunction_6A57BA0A": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/Default",
            "uniqueId": "root_cloudFunction_6A57BA0A",
          },
        },
        "environment": {
          "variables": {
            "WING_FUNCTION_NAME": "cloud.Function",
          },
        },
        "function_name": "cloud.Function",
        "handler": "index.handler",
        "role": "\${aws_iam_role.root_cloudFunction_IamRole_DAEC3578.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_cloudFunction_Bucket_245CAEB7.bucket}",
        "s3_key": "\${aws_s3_object.root_cloudFunction_S3Object_C8435368.key}",
      },
    },
    "aws_s3_bucket": {
      "root_cloudBucket_4F3C4F53": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Default",
            "uniqueId": "root_cloudBucket_4F3C4F53",
          },
        },
      },
      "root_cloudFunction_Bucket_245CAEB7": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/Bucket",
            "uniqueId": "root_cloudFunction_Bucket_245CAEB7",
          },
        },
      },
    },
    "aws_s3_bucket_public_access_block": {
      "root_cloudBucket_PublicAccessBlock_319C1C2E": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/PublicAccessBlock",
            "uniqueId": "root_cloudBucket_PublicAccessBlock_319C1C2E",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "root_cloudBucket_Encryption_8ED0CD9C": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Encryption",
            "uniqueId": "root_cloudBucket_Encryption_8ED0CD9C",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_object": {
      "root_cloudFunction_S3Object_C8435368": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/S3Object",
            "uniqueId": "root_cloudFunction_S3Object_C8435368",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudFunction_Bucket_245CAEB7.bucket}",
        "key": "<ASSET_KEY>",
      },
    },
  },
}
`;

exports[`wing compile print.w > index.js 1`] = `
"async function $proc({  }, event) {
  console.log(event);
};"
`;

exports[`wing compile print.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile print.w > preflight.js 1`] = `
"const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? \\".\\";

function __app(target) {
	switch (target) {
		case \\"sim\\":
			return $stdlib.sim.App;
		case \\"tfaws\\":
		case \\"tf-aws\\":
			return $stdlib.tfaws.App;
		default:
			throw new Error(\`Unknown WING_TARGET value: \\"\${process.env.WING_TARGET ?? \\"\\"}\\"\`);
	}
}
const $App = __app(process.env.WING_TARGET);

const cloud = require('@winglang/wingsdk').cloud;
class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: \\"print\\" });
  
  let bucket1 = new cloud.Bucket(this,\\"cloud.Bucket\\");
  console.log(\\"Hello world!\\");
  const handler = new $stdlib.core.Inflight({
    code: $stdlib.core.NodeJsCode.fromFile(require('path').resolve(__dirname, \\"proc.91c1f1c94279b3e82aa792c681ccb4640c7a071a1b60763fc83e70bf81b7f66c/index.js\\")),
    entrypoint: \\"$proc\\",
    
  });
  new cloud.Function(this,\\"cloud.Function\\",handler);
}
}
new MyApp().synth();"
`;

exports[`wing compile statements_if.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
}
`;

exports[`wing compile statements_if.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile statements_if.w > preflight.js 1`] = `
"const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? \\".\\";

function __app(target) {
	switch (target) {
		case \\"sim\\":
			return $stdlib.sim.App;
		case \\"tfaws\\":
		case \\"tf-aws\\":
			return $stdlib.tfaws.App;
		default:
			throw new Error(\`Unknown WING_TARGET value: \\"\${process.env.WING_TARGET ?? \\"\\"}\\"\`);
	}
}
const $App = __app(process.env.WING_TARGET);

class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: \\"statements_if\\" });
  
  if (true) {
    let x = 2;
  }
}
}
new MyApp().synth();"
`;

exports[`wing compile statements_variable_declarations.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
}
`;

exports[`wing compile statements_variable_declarations.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile statements_variable_declarations.w > preflight.js 1`] = `
"const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? \\".\\";

function __app(target) {
	switch (target) {
		case \\"sim\\":
			return $stdlib.sim.App;
		case \\"tfaws\\":
		case \\"tf-aws\\":
			return $stdlib.tfaws.App;
		default:
			throw new Error(\`Unknown WING_TARGET value: \\"\${process.env.WING_TARGET ?? \\"\\"}\\"\`);
	}
}
const $App = __app(process.env.WING_TARGET);

class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: \\"statements_variable_declarations\\" });
  
  let x = 2;
  let y = x;
}
}
new MyApp().synth();"
`;
